# volta

./: .zenodo.json  CITATION.cff  Cargo.toml  README.md  Rocket.toml.dist  citation.bib  clippy.toml  ir.sh  nginx.conf  renovate.json  rust-toolchain  shell.nix  volta-routes.conf
.cargo/: config.toml
.tx/: config
contrib/: hagrid@.service  volta@.service
database/: Cargo.toml
po/volta/: en.po  volta.pot
src/: counters.rs  delete.rs  main.rs  sealed_state.rs
src/web/: mod.rs
voltactl/: Cargo.toml  Rocket.toml
voltactl/src/: import.rs  main.rs  regenerate.rs
