[package]
name = "volta"
version = "1.1.0"
authors = ["Matt A. Porter <map@qompass.ai>"]
build = "build.rs"
default-run = "volta"
edition = "2024"
license = "MIT OR Apache-2.0"
[workspace]
members = [
    "database",
    "voltactl",
]

[dependencies]
volta-database = { path = "database" }
oqs = { version = "0.11.0", optional = true }
chrono = "0.4.10"
anyhow = "1"
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"] }
rocket_codegen = "0.5.0-rc.1"
sequoia-openpgp =  { version = "1", default-features = false, features = ["crypto-nettle"] }
multipart = "0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
tempfile = "3.0"
structopt = "0.2"
url = "1.6"
handlebars = "3"
num_cpus = "1.0"
ring = "0.13"
base64 = "0.10"
uuid = { version = "0.7", features = [ "v4" ] }
rocket_prometheus = "0.10.0-rc.1"
lazy_static = "1.3.0"
gettext-macros = "0.6.1"
gettext-utils = "0.1"
gettext = "0.4"
glob = "0.3"
rfc2047 = "0.1"
hyperx = "1.4"

[dependencies.rocket_i18n]
git = "https://github.com/Plume-org/rocket_i18n"
branch = "go-async"
default-features = false
features = ["rocket"]

[dependencies.lettre]
version = "0.10.0-pre"
default-features = false
# smtp-transport doesn't build (openssl problem)
features = ["builder", "file-transport", "sendmail-transport"]
git = "https://github.com/lettre/lettre"
rev = "245c600c82ee18b766e8729f005ff453a55dce34"

[build-dependencies]
vergen = "3"
oqs-sys = { version = "0.11.0+liboqs-0.13.0", optional = true }
[dev-dependencies]
regex = "1"

[[bin]]
name = "volta"
path = "src/main.rs"

[[bin]]
name = "volta-delete"
path = "src/delete.rs"

[profile.release]
opt-level = 3
lto = true
debug = false

[features]
default = []
vendor = ["oqs", "oqs-sys"]
